[workspace.package]
description = "The LAOS parachain node."
repository = "https://github.com/freeverseio/laos.git"
homepage = "https://www.laosfoundation.io"
authors = ["Freeverse"]
edition = "2021"
version = "1.1.2"

[workspace]
resolver = "2"

members = [
   "node",
   "runtime/*",
   "pallets/*",
   "precompiles/*",
   "primitives",
   "xcm-simulator"
]

[workspace.dependencies]
parity-scale-codec = { version = "3.2.2", default-features = false, features = ["derive"] }
hex-literal = "0.4.1"
hex = { version = "0.4.3", default-features = false }
scale-info = { version = "2.7.0", default-features = false, features = ["derive"] }
smallvec = "1.10.0"
num_enum = { version = "0.7.0", default-features = false }
clap = { version = "4.2.7" }
futures = "0.3.25"
jsonrpsee = { version = "0.24.7" }
jsonrpsee-core = { version = "0.24.4" }
log = { version = "0.4.20", default-features = false }
serde = { version = "1.0.163", default-features = false }
sha3 = { version = "0.10.1", default-features = false }
similar-asserts = { version = "1.1.0" }
serde_json = { version = "1.0.104", default-features = true }
rustc-hex = { version = "2.1", default-features = false }
frame-metadata = "16.0.0"
assert-json-diff = "2.0.2"
reqwest = { version = "0.12.12" }

# Wasm builder
substrate-wasm-builder = { git = "https://github.com/laosfoundation/polkadot-sdk", branch = "stable2409-laos" }

# Substrate
# (wasm)
sp-core = { git = "https://github.com/laosfoundation/polkadot-sdk", branch = "stable2409-laos", default-features = false }
sp-io = { git = "https://github.com/laosfoundation/polkadot-sdk", branch = "stable2409-laos", default-features = false }
sp-runtime = { git = "https://github.com/laosfoundation/polkadot-sdk", branch = "stable2409-laos", default-features = false }
sp-staking = { git = "https://github.com/laosfoundation/polkadot-sdk", branch = "stable2409-laos", default-features = false }
sp-std = { git = "https://github.com/laosfoundation/polkadot-sdk", branch = "stable2409-laos", default-features = false }
sp-api = { git = "https://github.com/laosfoundation/polkadot-sdk", branch = "stable2409-laos", default-features = false }
sp-block-builder = { git = "https://github.com/laosfoundation/polkadot-sdk", branch = "stable2409-laos", default-features = false }
sp-consensus-aura = { git = "https://github.com/laosfoundation/polkadot-sdk", branch = "stable2409-laos", default-features = false }
sp-inherents = { git = "https://github.com/laosfoundation/polkadot-sdk", branch = "stable2409-laos", default-features = false }
sp-offchain = { git = "https://github.com/laosfoundation/polkadot-sdk", branch = "stable2409-laos", default-features = false }
sp-session = { git = "https://github.com/laosfoundation/polkadot-sdk", branch = "stable2409-laos", default-features = false }
sp-transaction-pool = { git = "https://github.com/laosfoundation/polkadot-sdk", branch = "stable2409-laos", default-features = false }
sp-version = { git = "https://github.com/laosfoundation/polkadot-sdk", branch = "stable2409-laos", default-features = false }
sp-arithmetic = { git = "https://github.com/laosfoundation/polkadot-sdk", branch = "stable2409-laos", default-features = false }
sp-externalities = { git = "https://github.com/laosfoundation/polkadot-sdk", branch = "stable2409-laos", default-features = false }
sp-consensus-grandpa = { git = "https://github.com/laosfoundation/polkadot-sdk", branch = "stable2409-laos", default-features = false }
sp-keyring = { git = "https://github.com/laosfoundation/polkadot-sdk", branch = "stable2409-laos", default-features = false }
sp-state-machine = { git = "https://github.com/laosfoundation/polkadot-sdk", branch = "stable2409-laos", default-features = false }
sp-consensus-slots = { git = "https://github.com/laosfoundation/polkadot-sdk", branch = "stable2409-laos", default-features = false }
sp-weights ={ git = "https://github.com/laosfoundation/polkadot-sdk", branch = "stable2409-laos", default-features = false }
sp-genesis-builder ={ git = "https://github.com/laosfoundation/polkadot-sdk", branch = "stable2409-laos", default-features = false }
sp-tracing ={ git = "https://github.com/laosfoundation/polkadot-sdk", branch = "stable2409-laos", default-features = false }

# (native)
sp-blockchain = { git = "https://github.com/laosfoundation/polkadot-sdk", branch = "stable2409-laos" }
sp-consensus = { git = "https://github.com/laosfoundation/polkadot-sdk", branch = "stable2409-laos" }
sp-keystore = { git = "https://github.com/laosfoundation/polkadot-sdk", branch = "stable2409-laos" }
sp-timestamp = { git = "https://github.com/laosfoundation/polkadot-sdk", branch = "stable2409-laos" }
sp-trie = { git = "https://github.com/laosfoundation/polkadot-sdk", branch = "stable2409-laos" }
sc-basic-authorship = { git = "https://github.com/laosfoundation/polkadot-sdk", branch = "stable2409-laos" }
sc-chain-spec = { git = "https://github.com/laosfoundation/polkadot-sdk", branch = "stable2409-laos" }
sc-client-api = { git = "https://github.com/laosfoundation/polkadot-sdk", branch = "stable2409-laos" }
sc-client-db = { git = "https://github.com/laosfoundation/polkadot-sdk", branch = "stable2409-laos" }
sc-consensus = { git = "https://github.com/laosfoundation/polkadot-sdk", branch = "stable2409-laos" }
sc-consensus-aura = { git = "https://github.com/laosfoundation/polkadot-sdk", branch = "stable2409-laos" }
sc-executor = { git = "https://github.com/laosfoundation/polkadot-sdk", branch = "stable2409-laos" }
sc-network = { git = "https://github.com/laosfoundation/polkadot-sdk", branch = "stable2409-laos" }
sc-network-sync = { git = "https://github.com/laosfoundation/polkadot-sdk", branch = "stable2409-laos" }
sc-network-common = { git = "https://github.com/laosfoundation/polkadot-sdk", branch = "stable2409-laos" }
sc-offchain = { git = "https://github.com/laosfoundation/polkadot-sdk", branch = "stable2409-laos" }
sc-rpc = { git = "https://github.com/laosfoundation/polkadot-sdk", branch = "stable2409-laos" }
sc-sysinfo = { git = "https://github.com/laosfoundation/polkadot-sdk", branch = "stable2409-laos" }
sc-service = { git = "https://github.com/laosfoundation/polkadot-sdk", branch = "stable2409-laos" }
sc-telemetry = { git = "https://github.com/laosfoundation/polkadot-sdk", branch = "stable2409-laos" }
sc-tracing = { git = "https://github.com/laosfoundation/polkadot-sdk", branch = "stable2409-laos" }
sc-transaction-pool = { git = "https://github.com/laosfoundation/polkadot-sdk", branch = "stable2409-laos" }
sc-transaction-pool-api = { git = "https://github.com/laosfoundation/polkadot-sdk", branch = "stable2409-laos" }
sc-utils = { git = "https://github.com/laosfoundation/polkadot-sdk", branch = "stable2409-laos" }
sc-consensus-grandpa = { git = "https://github.com/laosfoundation/polkadot-sdk", branch = "stable2409-laos" }
sc-consensus-grandpa-rpc = { git = "https://github.com/laosfoundation/polkadot-sdk", branch = "stable2409-laos" }
sc-keystore = { git = "https://github.com/laosfoundation/polkadot-sdk", branch = "stable2409-laos" }
sc-rpc-api = { git = "https://github.com/laosfoundation/polkadot-sdk", branch = "stable2409-laos" }
substrate-prometheus-endpoint = { git = "https://github.com/laosfoundation/polkadot-sdk", branch = "stable2409-laos" }
pallet-transaction-payment-rpc = { git = "https://github.com/laosfoundation/polkadot-sdk", branch = "stable2409-laos" }
substrate-frame-rpc-system = { git = "https://github.com/laosfoundation/polkadot-sdk", branch = "stable2409-laos" }
sc-cli = { git = "https://github.com/laosfoundation/polkadot-sdk", branch = "stable2409-laos" }
frame-benchmarking-cli = { git = "https://github.com/laosfoundation/polkadot-sdk", branch = "stable2409-laos" }

substrate-build-script-utils = { git = "https://github.com/laosfoundation/polkadot-sdk", branch = "stable2409-laos" }

# Substrate pallets
# (wasm)
pallet-assets = { git = "https://github.com/laosfoundation/polkadot-sdk", branch = "stable2409-laos", default-features = false }
pallet-balances = { git = "https://github.com/laosfoundation/polkadot-sdk", branch = "stable2409-laos", default-features = false }
pallet-message-queue = { git = "https://github.com/laosfoundation/polkadot-sdk", branch = "stable2409-laos", default-features = false }
pallet-utility = { git = "https://github.com/laosfoundation/polkadot-sdk", branch = "stable2409-laos", default-features = false }
frame-support = { git = "https://github.com/laosfoundation/polkadot-sdk", branch = "stable2409-laos", default-features = false }
frame-system = { git = "https://github.com/laosfoundation/polkadot-sdk", branch = "stable2409-laos", default-features = false }
frame-executive = { git = "https://github.com/laosfoundation/polkadot-sdk", branch = "stable2409-laos", default-features = false }
frame-system-rpc-runtime-api = { git = "https://github.com/laosfoundation/polkadot-sdk", branch = "stable2409-laos", default-features = false }
pallet-aura = { git = "https://github.com/laosfoundation/polkadot-sdk", branch = "stable2409-laos", default-features = false }
pallet-authorship = { git = "https://github.com/laosfoundation/polkadot-sdk", branch = "stable2409-laos", default-features = false }
pallet-session = { git = "https://github.com/laosfoundation/polkadot-sdk", branch = "stable2409-laos", default-features = false, features = ["historical"] }
pallet-scheduler = { git = "https://github.com/laosfoundation/polkadot-sdk", branch = "stable2409-laos", default-features = false }
pallet-sudo = { git = "https://github.com/laosfoundation/polkadot-sdk", branch = "stable2409-laos", default-features = false }
pallet-multisig = { git = "https://github.com/laosfoundation/polkadot-sdk", branch = "stable2409-laos", default-features = false }
pallet-timestamp = { git = "https://github.com/laosfoundation/polkadot-sdk", branch = "stable2409-laos", default-features = false }
pallet-identity = { git = "https://github.com/laosfoundation/polkadot-sdk", branch = "stable2409-laos", default-features = false }
pallet-democracy = { git = "https://github.com/laosfoundation/polkadot-sdk", branch = "stable2409-laos", default-features = false }
pallet-elections-phragmen = { git = "https://github.com/laosfoundation/polkadot-sdk", branch = "stable2409-laos", default-features = false }
pallet-treasury = { git = "https://github.com/laosfoundation/polkadot-sdk", branch = "stable2409-laos", default-features = false }
pallet-collective = { git = "https://github.com/laosfoundation/polkadot-sdk", branch = "stable2409-laos", default-features = false }
pallet-membership = { git = "https://github.com/laosfoundation/polkadot-sdk", branch = "stable2409-laos", default-features = false }
pallet-bounties = { git = "https://github.com/laosfoundation/polkadot-sdk", branch = "stable2409-laos", default-features = false }
pallet-transaction-payment = { git = "https://github.com/laosfoundation/polkadot-sdk", branch = "stable2409-laos", default-features = false }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/laosfoundation/polkadot-sdk", branch = "stable2409-laos", default-features = false }
pallet-preimage = { git = "https://github.com/laosfoundation/polkadot-sdk", branch = "stable2409-laos", default-features = false }
pallet-uniques = { git = "https://github.com/laosfoundation/polkadot-sdk", branch = "stable2409-laos", default-features = false }
pallet-vesting = { git = "https://github.com/laosfoundation/polkadot-sdk", branch = "stable2409-laos", default-features = false }
pallet-proxy = { git = "https://github.com/laosfoundation/polkadot-sdk", branch = "stable2409-laos", default-features = false }
assets-common = { git = "https://github.com/laosfoundation/polkadot-sdk", branch = "stable2409-laos", default-features = false }
frame-benchmarking = { git = "https://github.com/laosfoundation/polkadot-sdk", branch = "stable2409-laos", default-features = false }
frame-system-benchmarking = { git = "https://github.com/laosfoundation/polkadot-sdk", branch = "stable2409-laos", default-features = false }
frame-try-runtime = { git = "https://github.com/laosfoundation/polkadot-sdk", branch = "stable2409-laos", default-features = false }

# EVM & Ethereum
# (wasm)
# To make it compatible with frontier
evm = { version = "0.41.1", default-features = false }
ethereum = { version = "0.15.0", default-features = false }

# Frontier
# (wasm)
pallet-base-fee = { git = "https://github.com/paritytech/frontier", branch = "stable2409", default-features = false }
pallet-evm = { git = "https://github.com/paritytech/frontier", branch = "stable2409", default-features = false }
pallet-ethereum = { git = "https://github.com/paritytech/frontier", branch = "stable2409", default-features = false }
pallet-evm-chain-id = { git = "https://github.com/paritytech/frontier", branch = "stable2409", default-features = false }
pallet-evm-precompile-modexp = { git = "https://github.com/paritytech/frontier", branch = "stable2409", default-features = false }
pallet-evm-precompile-simple = { git = "https://github.com/paritytech/frontier", branch = "stable2409", default-features = false }
pallet-evm-precompile-bn128 = { git = "https://github.com/paritytech/frontier", branch = "stable2409", default-features = false }
pallet-evm-precompile-blake2 = { git = "https://github.com/paritytech/frontier", branch = "stable2409", default-features = false }
pallet-hotfix-sufficients = { git = "https://github.com/paritytech/frontier", branch = "stable2409", default-features = false }
pallet-evm-precompile-sha3fips = { git = "https://github.com/paritytech/frontier", branch = "stable2409", default-features = false }
pallet-dynamic-fee = { git = "https://github.com/paritytech/frontier", branch = "stable2409", default-features = false }
fp-self-contained = { git = "https://github.com/paritytech/frontier", branch = "stable2409", default-features = false }
fp-rpc = { git = "https://github.com/paritytech/frontier", branch = "stable2409", default-features = false }
fp-evm = { git = "https://github.com/paritytech/frontier", branch = "stable2409", default-features = false }
fp-account = { git = "https://github.com/paritytech/frontier", branch = "stable2409", default-features = false }

# Utils
precompile-utils = { git = "https://github.com/paritytech/frontier", branch = "stable2409", default-features = false }

# Frontier
# (native)
fc-api = { git = "https://github.com/paritytech/frontier", branch = "stable2409" }
fc-cli = { git = "https://github.com/paritytech/frontier", branch = "stable2409" }
fc-rpc = { git = "https://github.com/paritytech/frontier", branch = "stable2409", features = [ "rpc-binary-search-estimate" ] }
fc-rpc-core = { git = "https://github.com/paritytech/frontier", branch = "stable2409" }
fc-mapping-sync = { git = "https://github.com/paritytech/frontier", branch = "stable2409" }
fc-db = { git = "https://github.com/paritytech/frontier", branch = "stable2409" }
fc-consensus = { git = "https://github.com/paritytech/frontier", branch = "stable2409" }
fp-dynamic-fee = { git = "https://github.com/paritytech/frontier", branch = "stable2409" }

# Cumulus
# (wasm)
cumulus-pallet-aura-ext = { git = "https://github.com/laosfoundation/polkadot-sdk", branch = "stable2409-laos", default-features = false }
cumulus-pallet-parachain-system = { git = "https://github.com/laosfoundation/polkadot-sdk", branch = "stable2409-laos", default-features = false }
cumulus-pallet-xcmp-queue = { git = "https://github.com/laosfoundation/polkadot-sdk", branch = "stable2409-laos", default-features = false }
cumulus-pallet-session-benchmarking = { git = "https://github.com/laosfoundation/polkadot-sdk", branch = "stable2409-laos", default-features = false }
cumulus-primitives-core = { git = "https://github.com/laosfoundation/polkadot-sdk", branch = "stable2409-laos", default-features = false }
cumulus-primitives-timestamp = { git = "https://github.com/laosfoundation/polkadot-sdk", branch = "stable2409-laos", default-features = false }
cumulus-primitives-utility = { git = "https://github.com/laosfoundation/polkadot-sdk", branch = "stable2409-laos", default-features = false }
cumulus-primitives-parachain-inherent = { git = "https://github.com/laosfoundation/polkadot-sdk", branch = "stable2409-laos", default-features = false }
cumulus-test-relay-sproof-builder = { git = "https://github.com/laosfoundation/polkadot-sdk", branch = "stable2409-laos", default-features = false }
parachain-info = { package = "staging-parachain-info", git = "https://github.com/laosfoundation/polkadot-sdk", branch = "stable2409-laos", default-features = false }
parachains-common = { git = "https://github.com/laosfoundation/polkadot-sdk", branch = "stable2409-laos", default-features = false }

# (native)
cumulus-client-cli = { git = "https://github.com/laosfoundation/polkadot-sdk", branch = "stable2409-laos" }
cumulus-client-collator = { git = "https://github.com/laosfoundation/polkadot-sdk", branch = "stable2409-laos" }
cumulus-client-consensus-aura = { git = "https://github.com/laosfoundation/polkadot-sdk", branch = "stable2409-laos" }
cumulus-client-consensus-common = { git = "https://github.com/laosfoundation/polkadot-sdk", branch = "stable2409-laos" }
cumulus-client-network = { git = "https://github.com/laosfoundation/polkadot-sdk", branch = "stable2409-laos" }
cumulus-client-consensus-proposer = {git = "https://github.com/laosfoundation/polkadot-sdk", branch = "stable2409-laos"}
cumulus-client-service = { git = "https://github.com/laosfoundation/polkadot-sdk", branch = "stable2409-laos" }
cumulus-relay-chain-interface = { git = "https://github.com/laosfoundation/polkadot-sdk", branch = "stable2409-laos" }

# Polkadot
# (wasm)
polkadot-parachain-primitives = { git = "https://github.com/laosfoundation/polkadot-sdk", branch = "stable2409-laos", default-features = false }
polkadot-primitives = { git = "https://github.com/laosfoundation/polkadot-sdk", branch = "stable2409-laos", default-features = false }
polkadot-runtime-common = { git = "https://github.com/laosfoundation/polkadot-sdk", branch = "stable2409-laos", default-features = false }
polkadot-core-primitives = { git = "https://github.com/laosfoundation/polkadot-sdk", branch = "stable2409-laos", default-features = false }
polkadot-runtime-parachains = { git = "https://github.com/laosfoundation/polkadot-sdk", branch = "stable2409-laos", default-features = false }
pallet-xcm = { git = "https://github.com/laosfoundation/polkadot-sdk", branch = "stable2409-laos",  default-features = false }

# Temporary, to ensure `runtime-benchmarks` features can compile
polkadot-runtime = { git = "https://github.com/laosfoundation/polkadot-sdk", branch = "stable2409-laos", default-features = false }

# XCM
# (wasm)
cumulus-pallet-xcm = { git = "https://github.com/laosfoundation/polkadot-sdk", branch = "stable2409-laos", default-features = false }
xcm = { package = "staging-xcm", git = "https://github.com/laosfoundation/polkadot-sdk", branch = "stable2409-laos", default-features = false }
xcm-builder = { package = "staging-xcm-builder", git = "https://github.com/laosfoundation/polkadot-sdk", branch = "stable2409-laos", default-features = false }
xcm-executor = { package = "staging-xcm-executor", git = "https://github.com/laosfoundation/polkadot-sdk", branch = "stable2409-laos", default-features = false }
xcm-simulator = { git = "https://github.com/laosfoundation/polkadot-sdk", branch = "stable2409-laos", default-features = false }
xcm-runtime-apis = { git = "https://github.com/laosfoundation/polkadot-sdk", branch = "stable2409-laos", default-features = false }

# (native)
polkadot-cli = { git = "https://github.com/laosfoundation/polkadot-sdk", branch = "stable2409-laos" }
polkadot-service = { git = "https://github.com/laosfoundation/polkadot-sdk", branch = "stable2409-laos" }

# Other pallets
# (wasm)
substrate-fixed = { git = "https://github.com/encointer/substrate-fixed", default-features = false }
derive_more = "0.99"

# LAOS pallets
pallet-laos-evolution = { path = "./pallets/laos-evolution", default-features = false }
pallet-asset-metadata-extender = { path = "./pallets/asset-metadata-extender", default-features = false }
pallet-parachain-staking = { path = "./pallets/parachain-staking", default-features = false }
pallet-evm-precompile-parachain-staking = { path = "./precompiles/parachain-staking", default-features = false }
pallet-precompiles-benchmark = { path = "./pallets/precompiles-benchmark", default-features = false}
pallet-treasury-funding = { path = "./pallets/treasury-funding", default-features = false }

# Primitives
laos-primitives = { path = "./primitives", default-features = false }
test-utils = { path = "./utils/test", default-features = false }

# runtime
laos-runtime = { path = "./runtime/laos", default-features = false }

[patch."https://github.com/paritytech/polkadot-sdk"]
frame-support = { git = "https://github.com/laosfoundation/polkadot-sdk", branch = "stable2409-laos" }
frame-system = { git = "https://github.com/laosfoundation/polkadot-sdk", branch = "stable2409-laos" }
sp-api = { git = "https://github.com/laosfoundation/polkadot-sdk", branch = "stable2409-laos" }
sp-application-crypto = { git = "https://github.com/laosfoundation/polkadot-sdk", branch = "stable2409-laos" }
sp-arithmetic = { git = "https://github.com/laosfoundation/polkadot-sdk", branch = "stable2409-laos" }
sp-core = { git = "https://github.com/laosfoundation/polkadot-sdk", branch = "stable2409-laos" }
sp-crypto-hashing = { git = "https://github.com/laosfoundation/polkadot-sdk", branch = "stable2409-laos" }
sp-debug-derive = { git = "https://github.com/laosfoundation/polkadot-sdk", branch = "stable2409-laos" }
sp-externalities = { git = "https://github.com/laosfoundation/polkadot-sdk", branch = "stable2409-laos" }
sp-genesis-builder = { git = "https://github.com/laosfoundation/polkadot-sdk", branch = "stable2409-laos" }
sp-inherents = { git = "https://github.com/laosfoundation/polkadot-sdk", branch = "stable2409-laos" }
sp-io = { git = "https://github.com/laosfoundation/polkadot-sdk", branch = "stable2409-laos" }
sp-keystore = { git = "https://github.com/laosfoundation/polkadot-sdk", branch = "stable2409-laos" }
sp-metadata-ir = { git = "https://github.com/laosfoundation/polkadot-sdk", branch = "stable2409-laos" }
sp-panic-handler = { git = "https://github.com/laosfoundation/polkadot-sdk", branch = "stable2409-laos" }
sp-runtime = { git = "https://github.com/laosfoundation/polkadot-sdk", branch = "stable2409-laos" }
sp-runtime-interface = { git = "https://github.com/laosfoundation/polkadot-sdk", branch = "stable2409-laos" }
sp-staking = { git = "https://github.com/laosfoundation/polkadot-sdk", branch = "stable2409-laos" }
sp-state-machine = { git = "https://github.com/laosfoundation/polkadot-sdk", branch = "stable2409-laos" }
sp-std = { git = "https://github.com/laosfoundation/polkadot-sdk", branch = "stable2409-laos" }
sp-storage = { git = "https://github.com/laosfoundation/polkadot-sdk", branch = "stable2409-laos" }
sp-tracing = { git = "https://github.com/laosfoundation/polkadot-sdk", branch = "stable2409-laos" }
sp-trie = { git = "https://github.com/laosfoundation/polkadot-sdk", branch = "stable2409-laos" }
sp-version = { git = "https://github.com/laosfoundation/polkadot-sdk", branch = "stable2409-laos" }
sp-wasm-interface = { git = "https://github.com/laosfoundation/polkadot-sdk", branch = "stable2409-laos" }
sp-weights = { git = "https://github.com/laosfoundation/polkadot-sdk", branch = "stable2409-laos" }
staging-xcm = { package = "staging-xcm", git = "https://github.com/laosfoundation/polkadot-sdk", branch = "stable2409-laos" }
substrate-bip39 = { git = "https://github.com/laosfoundation/polkadot-sdk", branch = "stable2409-laos" }
fork-tree = { git = "https://github.com/laosfoundation/polkadot-sdk", branch = "stable2409-laos" }
sc-allocator = { git = "https://github.com/laosfoundation/polkadot-sdk", branch = "stable2409-laos" }
sc-block-builder = { git = "https://github.com/laosfoundation/polkadot-sdk", branch = "stable2409-laos" }
sc-chain-spec = { git = "https://github.com/laosfoundation/polkadot-sdk", branch = "stable2409-laos" }
sc-cli = { git = "https://github.com/laosfoundation/polkadot-sdk", branch = "stable2409-laos" }
sc-client-api = { git = "https://github.com/laosfoundation/polkadot-sdk", branch = "stable2409-laos" }
sc-client-db = { git = "https://github.com/laosfoundation/polkadot-sdk", branch = "stable2409-laos" }
sc-consensus = { git = "https://github.com/laosfoundation/polkadot-sdk", branch = "stable2409-laos" }
sc-consensus-aura = { git = "https://github.com/laosfoundation/polkadot-sdk", branch = "stable2409-laos" }
sc-consensus-slots = { git = "https://github.com/laosfoundation/polkadot-sdk", branch = "stable2409-laos" }
sc-executor = { git = "https://github.com/laosfoundation/polkadot-sdk", branch = "stable2409-laos" }
sc-executor-common = { git = "https://github.com/laosfoundation/polkadot-sdk", branch = "stable2409-laos" }
sc-executor-polkavm = { git = "https://github.com/laosfoundation/polkadot-sdk", branch = "stable2409-laos" }
sc-executor-wasmtime = { git = "https://github.com/laosfoundation/polkadot-sdk", branch = "stable2409-laos" }
sc-informant = { git = "https://github.com/laosfoundation/polkadot-sdk", branch = "stable2409-laos" }
sc-keystore = { git = "https://github.com/laosfoundation/polkadot-sdk", branch = "stable2409-laos" }
sc-mixnet = { git = "https://github.com/laosfoundation/polkadot-sdk", branch = "stable2409-laos" }
sc-network = { git = "https://github.com/laosfoundation/polkadot-sdk", branch = "stable2409-laos" }
sc-network-common = { git = "https://github.com/laosfoundation/polkadot-sdk", branch = "stable2409-laos" }
sc-network-light = { git = "https://github.com/laosfoundation/polkadot-sdk", branch = "stable2409-laos" }
sc-network-sync = { git = "https://github.com/laosfoundation/polkadot-sdk", branch = "stable2409-laos" }
sc-network-transactions = { git = "https://github.com/laosfoundation/polkadot-sdk", branch = "stable2409-laos" }
sc-network-types = { git = "https://github.com/laosfoundation/polkadot-sdk", branch = "stable2409-laos" }
sc-rpc = { git = "https://github.com/laosfoundation/polkadot-sdk", branch = "stable2409-laos" }
sc-rpc-api = { git = "https://github.com/laosfoundation/polkadot-sdk", branch = "stable2409-laos" }
sc-rpc-server = { git = "https://github.com/laosfoundation/polkadot-sdk", branch = "stable2409-laos" }
sc-rpc-spec-v2 = { git = "https://github.com/laosfoundation/polkadot-sdk", branch = "stable2409-laos" }
sc-service = { git = "https://github.com/laosfoundation/polkadot-sdk", branch = "stable2409-laos" }
sc-state-db = { git = "https://github.com/laosfoundation/polkadot-sdk", branch = "stable2409-laos" }
sc-sysinfo = { git = "https://github.com/laosfoundation/polkadot-sdk", branch = "stable2409-laos" }
sc-telemetry = { git = "https://github.com/laosfoundation/polkadot-sdk", branch = "stable2409-laos" }
sc-tracing = { git = "https://github.com/laosfoundation/polkadot-sdk", branch = "stable2409-laos" }
sc-transaction-pool = { git = "https://github.com/laosfoundation/polkadot-sdk", branch = "stable2409-laos" }
sc-transaction-pool-api = { git = "https://github.com/laosfoundation/polkadot-sdk", branch = "stable2409-laos" }
sc-utils = { git = "https://github.com/laosfoundation/polkadot-sdk", branch = "stable2409-laos" }
sp-block-builder = { git = "https://github.com/laosfoundation/polkadot-sdk", branch = "stable2409-laos" }
sp-blockchain = { git = "https://github.com/laosfoundation/polkadot-sdk", branch = "stable2409-laos" }
sp-consensus = { git = "https://github.com/laosfoundation/polkadot-sdk", branch = "stable2409-laos" }
sp-consensus-aura = { git = "https://github.com/laosfoundation/polkadot-sdk", branch = "stable2409-laos" }
sp-consensus-grandpa = { git = "https://github.com/laosfoundation/polkadot-sdk", branch = "stable2409-laos" }
sp-consensus-slots = { git = "https://github.com/laosfoundation/polkadot-sdk", branch = "stable2409-laos" }
sp-database = { git = "https://github.com/laosfoundation/polkadot-sdk", branch = "stable2409-laos" }
sp-keyring = { git = "https://github.com/laosfoundation/polkadot-sdk", branch = "stable2409-laos" }
sp-maybe-compressed-blob = { git = "https://github.com/laosfoundation/polkadot-sdk", branch = "stable2409-laos" }
sp-mixnet = { git = "https://github.com/laosfoundation/polkadot-sdk", branch = "stable2409-laos" }
sp-offchain = { git = "https://github.com/laosfoundation/polkadot-sdk", branch = "stable2409-laos" }
sp-rpc = { git = "https://github.com/laosfoundation/polkadot-sdk", branch = "stable2409-laos" }
sp-session = { git = "https://github.com/laosfoundation/polkadot-sdk", branch = "stable2409-laos" }
sp-statement-store = { git = "https://github.com/laosfoundation/polkadot-sdk", branch = "stable2409-laos" }
sp-timestamp = { git = "https://github.com/laosfoundation/polkadot-sdk", branch = "stable2409-laos" }
sp-transaction-pool = { git = "https://github.com/laosfoundation/polkadot-sdk", branch = "stable2409-laos" }
sp-transaction-storage-proof = { git = "https://github.com/laosfoundation/polkadot-sdk", branch = "stable2409-laos" }
substrate-prometheus-endpoint = { git = "https://github.com/laosfoundation/polkadot-sdk", branch = "stable2409-laos" }
