[package]
name = "laos"
edition = "2021"
authors = { workspace = true }
version = { workspace = true }
build = "build.rs"

[dependencies]
clap = { workspace = true, features = ["derive"] }
futures = { workspace = true }
log = { workspace = true }
parity-scale-codec = { workspace = true, features = ["derive"] }
serde = { workspace = true, features = ["derive"] }
jsonrpsee = { workspace = true, features = ["server"] }
hex-literal = { workspace = true }
serde_json = { workspace = true, default-features = true }

# Local
laos-runtime = { workspace = true, features = ["std"] }

# Substrate
frame-benchmarking-cli = { workspace = true }
pallet-transaction-payment-rpc = { workspace = true }
sc-basic-authorship = { workspace = true }
sc-chain-spec = { workspace = true }
sc-cli = { workspace = true }
sc-client-api = { workspace = true }
sc-consensus = { workspace = true }
sc-consensus-aura = { workspace = true }
sc-executor = { workspace = true }
sc-network = { workspace = true }
sc-network-sync = { workspace = true }
sc-offchain = { workspace = true }
sc-rpc = { workspace = true }
sc-service = { workspace = true }
sc-sysinfo = { workspace = true }
sc-telemetry = { workspace = true }
sc-tracing = { workspace = true }
sc-transaction-pool = { workspace = true }
sc-transaction-pool-api = { workspace = true }
sp-api = { workspace = true }
sp-block-builder = { workspace = true }
sp-blockchain = { workspace = true }
sp-consensus-aura = { workspace = true }
sp-core = { workspace = true }
sp-inherents = { workspace = true }
sp-keystore = { workspace = true }
sp-runtime = { workspace = true }
sp-timestamp = { workspace = true }
substrate-frame-rpc-system = { workspace = true }
substrate-prometheus-endpoint = { workspace = true }

# Polkadot
polkadot-cli = { workspace = true, features = ["rococo-native"] }
polkadot-service = { workspace = true, features = ["rococo-native"] }
polkadot-primitives = { workspace = true }
staging-xcm = { workspace = true }
laos-primitives = { workspace = true }

# Cumulus
cumulus-client-cli = { workspace = true }
cumulus-client-collator = { workspace = true }
cumulus-client-consensus-aura = { workspace = true }
cumulus-client-consensus-common = { workspace = true }
cumulus-client-consensus-proposer = { workspace = true }
cumulus-client-service = { workspace = true }
cumulus-primitives-core = { workspace = true }
cumulus-relay-chain-interface = { workspace = true }

# Frontier
fc-api = { workspace = true }
fc-cli = { workspace = true }
fc-rpc = { workspace = true, features = [ "rpc-binary-search-estimate", "txpool" ] }
fc-rpc-core = { workspace = true }
fc-mapping-sync = { workspace = true, features = ["sql"] }
fc-db = { workspace = true }
fc-consensus = { workspace = true }
fp-rpc = { workspace = true, default-features = false }
fp-evm = { workspace = true }
fp-dynamic-fee = { workspace = true }

[build-dependencies]
substrate-build-script-utils = { workspace = true }

[features]
default = [
	"txpool"
]
txpool = ["fc-rpc/txpool"]
runtime-benchmarks = [
	"laos-runtime/runtime-benchmarks",
	"polkadot-cli/runtime-benchmarks",
	"polkadot-service/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
	"sc-service/runtime-benchmarks",
	"polkadot-primitives/runtime-benchmarks",
	"frame-benchmarking-cli/runtime-benchmarks",
]
try-runtime = [
	"laos-runtime/try-runtime",
	"polkadot-cli/try-runtime",
	"polkadot-service/try-runtime",
	"sp-runtime/try-runtime",
]