[package]
name = "xcm-simulator-example"
description = "Examples of xcm-simulator usage."
authors.workspace = true
edition.workspace = true
version = "7.0.0"

[dependencies]
codec = { package = "parity-scale-codec", version = "3.6.1", default-features = false }
scale-info = { workspace = true }
log = { workspace = true }

frame-system = { workspace = true }
frame-support = { workspace = true }
pallet-balances = { workspace = true }
pallet-message-queue = { workspace = true }
# pallet-uniques = { workspace = true }
sp-std = { workspace = true }
sp-core = { workspace = true }
sp-runtime = { workspace = true }
sp-io = { workspace = true }
sp-tracing = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.11.0", default-features = false }

xcm = { workspace = true }
xcm-executor = { workspace = true }
xcm-builder = { workspace = true }
xcm-simulator = { workspace = true }
pallet-xcm = { workspace = true }
pallet-uniques = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.11.0", default-features = false }
polkadot-core-primitives = { workspace = true }
polkadot-runtime-parachains = { workspace = true }
polkadot-parachain-primitives = { workspace = true }
#laos-primitives = { workspace = true }

[features]
default = ["std"]
std = [
	"frame-support/std",
	"frame-system/std",
	"pallet-balances/std",
	"pallet-message-queue/std",
	"pallet-xcm/std",
	"polkadot-parachain-primitives/std",
	"polkadot-runtime-parachains/std",
	"sp-runtime/std",
	"sp-tracing/std",
	"pallet-uniques/std",
#	"laos-primitives/std",
	"sp-std/std",
	"sp-io/std",
	"sp-core/std",
	"sp-runtime/std",
	"polkadot-core-primitives/std",
	"xcm/std",
	"xcm-builder/std",
	"xcm-executor/std",
]
runtime-benchmarks = [
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"pallet-balances/runtime-benchmarks",
	"pallet-message-queue/runtime-benchmarks",
	"pallet-uniques/runtime-benchmarks",
	"pallet-xcm/runtime-benchmarks",
	"polkadot-parachain-primitives/runtime-benchmarks",
	"polkadot-runtime-parachains/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
#	"xcm-builder/runtime-benchmarks",
#	"xcm-executor/runtime-benchmarks",
]
